fix meta spacing on movie-detail
- todo: hide overflow but display tooltips

--- a/src/app/styl/views/movie_detail.styl
+++ b/src/app/styl/views/movie_detail.styl
@@ -54,8 +54,8 @@
         font-smoothing: antialiased
     }
     .meta-container {
-        top: 10px     
-        height: 18px
+        top: 15px     
+        height: 20px
         position: relative
         .item {
             color: #FFF
